--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,25 @@
-title: Hello, world! I'm David Freeman
+title: Blog de Jose Ramón Tauste
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Hola soy Jose Ramón Tauste estudiante de ciberseguridad en el instituto ies el caminás
+y publicaré en este blog mis trabajos.
 permalink: ':title/'
 baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-site-twitter: #if your site has a twitter account, enter it here
+site-twitter: https://twitter.com/joseramontauste #if your site has a twitter account, enter it here
 
 # Author Settings
-author: David Freeman # add your name
+author: Jose Ramón Tauste # add your name
 author-img: david-freeman.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
+about-author:   Hola soy Jose Ramón Tauste estudiante de ciberseguridad en el instituto ies el caminás
+y publicaré en este blog mis trabajos. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
-social-github: artemsheludko # add your Github handle
-social-linkedin: # add your Linkedin handle
-social-email: # add your Email address
+social-github: alutau # add your Github handle
+social-linkedin: https://www.linkedin.com/in/jose-ram%C3%B3n-tauste-candel-b9a0b2198/ # add your Linkedin handle
+social-email: alutau561@ieselcaminas.org # add your Email address
 
 # Disqus
-discus-identifier: mr-brown # add your discus identifier
+discus-identifier: alutau # add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
