--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Blog de Jose Ramón Tauste
 description: > # this means to ignore newlines until "baseurl:"
   Hola soy Jose Ramón Tauste estudiante de ciberseguridad en el instituto ies el caminás
-y publicaré en este blog mis trabajos.
+y publicaré en este blog mis propios trabajos.
 permalink: ':title/'
 baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
