--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: Blog de Jose Ramón Tauste
 description: > # this means to ignore newlines until "baseurl:"
-  Hola soy Jose Ramón Tauste estudiante de ciberseguridad en el instituto ies el caminás
-y publicaré en este blog mis propios trabajos.
+  Hola soy Jose Ramón Tauste estudiante de ciberseguridad en el instituto ies el caminás y publicaré en este blog mis propios trabajos.
 permalink: ':title/'
 baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
@@ -10,8 +9,8 @@ site-twitter: https://twitter.com/joseramontauste #if your site has a twitter ac
 # Author Settings
 author: Jose Ramón Tauste # add your name
 author-img: david-freeman.jpg # add your photo
-about-author:   Hola soy Jose Ramón Tauste estudiante de ciberseguridad en el instituto ies el caminás
-y publicaré en este blog mis trabajos. # add description
+about-author: Hola soy Jose Ramón Tauste estudiante de ciberseguridad en el instituto ies el caminás
+              y publicaré en este blog mis trabajos. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: alutau # add your Github handle
