--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ site-twitter: https://twitter.com/joseramontauste #if your site has a twitter ac
 
 # Author Settings
 author: Jose Ramón Tauste # add your name
-author-img: foto1.jpg # add your photo
+author-img: foto1.jpeg # add your photo
 about-author: Hola soy Jose Ramón Tauste estudiante de ciberseguridad en el instituto ies el caminás
               y publicaré en este blog mis trabajos. # add description
 social-twitter: /joseramontauste # add your Twitter handle
